--- a/_config.yml
+++ b/_config.yml
@@ -99,10 +99,10 @@ author:
   github           : "gpanelli"
   google_plus      :
   keybase          :
-  instagram        : "@ggpanelli"
+  instagram        : "ggpanelli"
   impactstory      : 
   lastfm           :
-  linkedin         :
+  linkedin         : "linkedin.com/in/guglielmo-panelli-803455145"
   orcid            : 
   pinterest        :
   soundcloud       :
@@ -113,7 +113,7 @@ author:
   vine             :
   weibo            :
   xing             :
-  youtube          : 
+  youtube          : "Guglielmo Panelli"
   wikipedia        :
 
 
