--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        : "ggpanelli"
   impactstory      : 
   lastfm           :
-  linkedin         : "linkedin.com/in/guglielmo-panelli-803455145"
+  linkedin         : "guglielmo-panelli-803455145"
   orcid            : 
   pinterest        :
   soundcloud       :
@@ -113,7 +113,7 @@ author:
   vine             :
   weibo            :
   xing             :
-  youtube          : "Guglielmo Panelli"
+  youtube          : "channel/UCIcA-7xWHtvpt3D8w2Z7-Qg"
   wikipedia        :
 
 
