--- a/_config.yml
+++ b/_config.yml
@@ -113,7 +113,7 @@ author:
   vine             :
   weibo            :
   xing             :
-  youtube          : "channel/UCIcA-7xWHtvpt3D8w2Z7-Qg"
+  youtube          : 
   wikipedia        :
 
 
