--- a/_config.yml
+++ b/_config.yml
@@ -57,9 +57,9 @@ yandex_site_verification :
 
 # Social Sharing
 twitter:
-  username               : &@ggpanelli
+  username               : "@ggpanelli"
 instagram:
-  username               : &ggpanelli
+  username               : "ggpanelli"
   app_id                 :
   publisher              :
 og_image                 :  # Open Graph/Twitter default site image
