--- a/_config.yml
+++ b/_config.yml
@@ -57,9 +57,9 @@ yandex_site_verification :
 
 # Social Sharing
 twitter:
-  username               : "@ggpanelli"
+  username               :
 instagram:
-  username               : "ggpanelli"
+  username               :
   app_id                 :
   publisher              :
 og_image                 :  # Open Graph/Twitter default site image
@@ -96,20 +96,20 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "gpanelli"
+  github           :
   google_plus      :
   keybase          :
-  instagram        : "ggpanelli"
+  instagram        :
   impactstory      : 
   lastfm           :
-  linkedin         : "guglielmo-panelli-803455145"
+  linkedin         :
   orcid            : 
   pinterest        :
   soundcloud       :
   stackoverflow    : 
   steam            :
   tumblr           :
-  twitter          : "@ggpanelli"
+  twitter          :
   vine             :
   weibo            :
   xing             :
