adjustments to those changes

--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Guglielmo Panelli"
   avatar           : "profile.png"
   bio              : "Graduate Physics student at Stanford University."
-  location         : "Reno, NV"
+  location         : "Stanford, CA"
   employer         :
   pubmed           : 
   googlescholar    : #"http://yourfullgooglescholarurl.com"
