--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Guglielmo Panelli"
-  avatar           : "profile.png"
+  avatar           : "Guglielmo-4.jpg"
   bio              : "Graduate Physics student at Stanford University."
   location         : "Stanford, CA"
   employer         :
